# Comp-on-GPU

./: CMakeLists.txt  ERROR  Error Log  README.md  TEST.cu  asd  build_nvcomp_gdeflate.sh  dataset_download.sh  makefile  test.ipynb
include/: MurmurHash2.cuh  MurmurHash2.h  delta_filter.cuh  diff_kernel.cuh  gather_kernel.cuh  hash_kernel.cuh
src/: MurmurHash2.cpp  delta_filter.cu  diff_kernel.cu  gather_kernel.cu  hash_kernel.cu
tests/: test_diff_kernel.cu  test_files.cu  test_h5_pipe.cu  test_h5_with_cuSZ.cu  test_hash_kernel.cu  test_pipe1.cu  test_with_cuSZ.cu
